hphp/test/zend/bad/ext/spl/tests/SplFixedArray_construct_param_SplFixedArray.php
<?php
$array = new SplFixedArray(new SplFixedArray(3));
var_dump($array);
?>